_sass/about.scss
#about-header {
  .ham-menu {
    display: block;
  }
}
#container-about {
  color: #b0b0b0;
  margin: 0 auto;
  #header-about {
    margin-top: -3%;
    background-image: url(../images/about/fs-bg.jpg);
    background-size: cover;
    width: 100%;

    img.image-left {
      display: inline-block;
      width: 100%;
    }

    .mobile-bg-hide {
      display: none;
    }

    .header-image {
      width: 40%;
    }

    .description {
      width: 40%;
      vertical-align: bottom;
      padding: 0 2em;
      padding-top: 181px;

      > p {
        padding-top: 15px;
      }
      .head-title {
        font-size: 2.2em;
        span {
          font-weight: bold;
          color: $primary-color;
        }
      }
    }
  }

  .rounded-red-button {
    border-radius: 500px;
    margin-top: 4px;
    font-weight: 500;
    font-size: .9em;
    color: $primary-color-darker-darker;
    border-color: $primary-color-darker-darker;
    border-style: solid;
    border-width: thin;
    padding: 5px 20px;
    text-transform: uppercase;
  }

  .view-listing-button {
    border-radius: 500px;
    color: white;
    border-style: solid;
    border-width: thin;
    margin-top: 4px;
    font-weight: 500;
    font-size: .6em;
    padding: 3px 18px;
  }

  .bio-pic-mobile {
    display: none;
  }

  .agent-details {
    display: none;
    position: fixed;
    overflow-y: auto;
    top: 0;
    left: 0;
    right: 0;
    bottom: 0;
    z-index: 10;
    background: rgba(255, 255, 255, 0.8);
    .content {
      position: relative;
      max-width: 1400px;
      background-color: white;
      width: 60vw;
      margin: 200px auto 0 auto;
      box-shadow: 0px 0px 2em gainsboro;
      font-size: 1.2em;
      .header {
        position: relative;
        margin-bottom: 5%;
        .bio-pic {
          position: absolute;
          left: -10px;
          height: 100%;
        }
        .contact {
          margin-left: 34%;
          display: inline-block;
          > h4 {
            color: #3e3e3e;
            font-weight: 100;
            font-size: 1.8em;
            margin-bottom: 5px;
          }
        }
      }
      .bio {
        margin: 0 30px;
        padding-bottom: 12px;
        color: black;
        opacity: .55;
        line-height: 110%;
        > h2 {
          font-size: 1.8em;
          opacity: 1;
          text-transform: uppercase;
        }
      }
      .footer {
        background-color: $primary-color;
        color: white;
        text-align: center;
        padding: 1px 0 0 0;
        .featured-listings {
          width: 100%;
          height: 100%;
          margin: 0 auto;
          display: flex;
          justify-content: center;
          .agent-featured-listing {
            width: 33.33%;
            height: 200px;
            position: relative;
            background-image: url("/images/placeholder-thumbnail.jpg");
            background-size: cover;
            .view-listing-button {
              position: absolute;
              text-decoration: none;
              left: 92px;
              top: 79px;
            }
          }
        }
      }
    }
  }

  .about-text {
    width: 100%;
    padding-top: 167px;
    .header-image {
      width: 50%;
      display: inline-block;
      vertical-align: bottom;
    }
    .description {
      width: 50%;
      line-height: 1.4;
      display: inline-block;
      vertical-align: bottom;
    }
  }

  .agent-listing {
    display: inherit;
    position: relative;
  }
  .agents {
    padding: 5em 0;
    text-align: center;
  }
  .agent {
    position: relative;
    text-align: center;
    margin: 0.8em;
    box-shadow: 0px 0px 2em gainsboro;
    width: 22%;
    padding-bottom: 19px;
    border: 1px solid #c7c7c7;
    .bio-image {
      position: relative;
      img { width: 100%; }
      .image-title {
        span {font-weight: bold;}
        color: white;
        position: absolute;
        bottom: 1em;
        text-align: left;
        margin-left: 1em
      }
    }
    .short-bio {
      margin: 1em 1.5em;
      line-height: 1.8;
      padding: 28px 12px 2px 12px;
      text-align: left;
    }
    .bio-button {
      display: inline-block;
      color: $primary-color;
      border: 1px solid $primary-color;
      font-size: 1.1em;
      padding: 0.4em 1em;
      border-radius: 500px;
      margin-bottom: 1em;
      cursor: pointer;
    }
    .bio-contact {
      margin-bottom: 1em;
      line-height: 1.8;
    }
  }

  .section-header {
    padding: 5% 1%;
    background: $primary-color;
    text-align: center;
    color: white;
    .title {
      max-width: $page-max-width;
      margin: 0 auto;
      font-weight: bold;
      font-size: 1.4em;
    }
  }

  .specialty {
    background: white;
    margin-top: 3em;
    background: white;
    width: 100%;
  }

  .section-content {
    margin-top: -3%;
    margin-bottom: 142px;
    .about {
      position: relative;
      margin: 0 auto;
      width: 874px;

      .about-pic {
        display: block;
        width: 100%;
      }
      .map {
        position: absolute;
        top: 418px;
        left: 575px;
        width: 400px;

      }
    }
  }

  @media screen and (max-width: $breakpoint-small) {
    .section-content {
      margin: 0;
      .about {
        width: 100%;
        .map {
          position: static;
          width: 100%;
        }
      }
    }

    .section-header {
      .title {
        font-size: 1em;
      }
    }
    .mobile-bg-hide {
      height: 0;
      overflow: hidden;
    }
    .ham-menu {
      background-size: 94%;
    }
    #header-about {
      .header-image {
        display: none;
      }

      .description {
        width: 100%;
        padding-top: 0;
        .head-title {
          text-align: center;
        }
      }
    }

    .agent {
      width: 90%;
    }

    .bio-pic-mobile {
      display: block;
      width: 88%;
      margin: 0 auto;
    }

    .agent-details {
      overflow: scroll;
      .content {
        background-color: white;
        width: 100%;
        height: 100%;
        margin: 0;
        box-shadow: 0px 0px 2em gainsboro;
        .header {
          margin-bottom: 5%;
          .bio-pic {
            display: none;
          }
          .contact {
            width: 100%;
            margin: 0 auto;
            text-align: center;
            > h4 {
              color: black;
            }
          }
        }
        .bio {
          margin: 25px;
          padding: 0;
          color: black;
          opacity: .55;
          line-height: 110%;
          > h2 {
            opacity: 1;
          }
        }
        .footer {
          background-color: $primary-color;
          color: white;
          text-align: center;
          padding-top: 1px;
          .featured-listings {
            width: 100%;
            height: 100%;
            margin: 0;
            display: flex;
            flex-direction: row;
            flex-flow: row wrap;
            justify-content: center;
            .agent-featured-listing {
              width: 100%;
              height: 15%;
            }
          }
        }
      }
    }
  }
}

